--- a/style.css
+++ b/style.css
@@ -274,6 +274,11 @@ a {
 .contacts__data input {
   height: 50px;
 }
+.contacts__content {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
 .contacts__button {
   margin-top: 80px;
   font-family: Arial, Helvetica, sans-serif;
@@ -421,8 +426,153 @@ a {
     width: 650px;
     margin-left: 30px;
   }
+  .contacts__content {
+    display: flex;
+    flex-direction: row;
+  }
   .contacts__title {
     font-size: 65px;
+  }
+  .copyright a i {
+    right: 5%;
+  }
+}
+@media (max-width: 896px) {
+  .logo__img {
+    width: 100px;
+  }
+  .top {
+    gap: 100px;
+    height: 500px;
+    width: 106%;
+  }
+  .top__title {
+    font-size: 38px;
+    width: 372px;
+  }
+  .top__button {
+    font-size: 15px;
+    width: 222px;
+    height: 45px;
+  }
+  .tutech {
+    height: 60px;
+    width: 106%;
+  }
+  .info {
+    padding-top: 60px;
+    padding-bottom: 50px;
+  }
+  .info__title {
+    font-size: 20px;
+  }
+  .info__title::after {
+    left: 45%;
+  }
+  .info__content {
+    gap: 15px;
+  }
+  .info__content p {
+    font-size: 17px;
+    line-height: 1.3;
+    width: 300px;
+  }
+  .info__img {
+    margin-right: 35px;
+  }
+  .info__img img {
+    width: 300px;
+    height: 300px;
+    margin-bottom: 14px;
+  }
+  .info__img__name {
+    bottom: -15%;
+    right: 0;
+  }
+  .info__img__name h2 {
+    font-size: 14px;
+    margin-bottom: 0;
+  }
+  .info__img__name p {
+    font-size: 12px;
+  }
+  .services {
+    height: 950px;
+    width: 106%;
+  }
+  .services__title {
+    font-size: 35px;
+    margin-top: 40px;
+  }
+  .services__options {
+    margin-top: 50px;
+    gap: 55px;
+  }
+  .services__options__item {
+    gap: 25px;
+  }
+  .services__options__img {
+    width: 100px;
+    height: 100px;
+  }
+  .services__options__img img {
+    width: 57px;
+    right: 22px;
+    bottom: 20px;
+  }
+  .services__options__text h2 {
+    font-size: 20px;
+  }
+  .services__button {
+    font-size: 15px;
+    width: 135px;
+  }
+  .review__title {
+    font-size: 45px;
+  }
+  .review__text {
+    font-size: 13px;
+    width: 300px;
+  }
+  .contacts__title {
+    font-size: 40px;
+    margin-right: 20px;
+  }
+  .form-control {
+    width: 300px;
+  }
+  .contacts {
+    width: 106%;
+  }
+  .contacts .container {
+    gap: 35px;
+  }
+  .contacts__content {
+    flex-direction: column;
+    margin-left: 25px;
+    gap: 6px;
+  }
+  .contacts__button {
+    margin-top: 40px;
+    font-size: 10px;
+    letter-spacing: 0.2em;
+    margin-bottom: 40px;
+  }
+  .copyright {
+    width: 106%;
+  }
+  .copyright a i {
+    font-size: 20px;
+    right: -2%;
+  }
+  .copyright p {
+    font-size: 8px;
+  }
+  .form-check {
+    display: block;
+  }
+  .form-check-label {
+    width: 250px;
   }
 }
 /*# sourceMappingURL=style.css.map */
