--- a/style.css
+++ b/style.css
@@ -374,6 +374,9 @@ a {
     font-size: 71px;
     width: 700px;
   }
+  .top__logo p {
+    display: none;
+  }
   .top__button {
     font-size: 22px;
     width: 380px;
@@ -409,15 +412,23 @@ a {
     height: 600px;
   }
   .services {
-    height: 1500px;
+    height: 1000px;
   }
   .services__title {
     font-size: 70px;
   }
   .services__options {
     display: flex;
-    flex-direction: column;
-    gap: 115px;
+    flex-wrap: wrap;
+    gap: 1px;
+  }
+  .services__options__item {
+    gap: 25px;
+    flex-grow: 1;
+    width: 345px;
+  }
+  .services__options__text h2 {
+    font-size: 27px;
   }
   .review__title {
     font-size: 75px;
@@ -437,7 +448,7 @@ a {
     right: 5%;
   }
 }
-@media (max-width: 896px) {
+@media (min-width: 768px) and (max-width: 819px) {
   .logo__img {
     width: 100px;
   }
@@ -445,6 +456,9 @@ a {
     gap: 100px;
     height: 500px;
     width: 106%;
+  }
+  .top__logo p {
+    display: none;
   }
   .top__title {
     font-size: 38px;
@@ -532,7 +546,7 @@ a {
   }
   .review__text {
     font-size: 13px;
-    width: 300px;
+    width: 250px;
   }
   .contacts__title {
     font-size: 40px;
@@ -575,4 +589,150 @@ a {
     width: 250px;
   }
 }
-/*# sourceMappingURL=style.css.map */
+
+@media (max-width: 767px) {
+  .logo__img {
+    width: 100px;
+  }
+  .top__logo p {
+    display: none;
+  }
+  .top {
+    gap: 100px;
+    height: 500px;
+    width: 100%;
+  }
+  .top__title {
+    font-size: 38px;
+    width: 372px;
+  }
+  .top__button {
+    font-size: 15px;
+    width: 222px;
+    height: 45px;
+  }
+  .tutech {
+    height: 60px;
+    width: 100%;
+  }
+  .info {
+    padding-top: 60px;
+    padding-bottom: 50px;
+  }
+  .info__title {
+    font-size: 20px;
+  }
+  .info__title::after {
+    left: 45%;
+  }
+  .info__content {
+    gap: 15px;
+  }
+  .info__content p {
+    font-size: 17px;
+    line-height: 1.3;
+    width: 300px;
+  }
+  .info__img {
+    margin-right: 35px;
+  }
+  .info__img img {
+    width: 300px;
+    height: 300px;
+    margin-bottom: 14px;
+  }
+  .info__img__name {
+    bottom: -15%;
+    right: 0;
+  }
+  .info__img__name h2 {
+    font-size: 14px;
+    margin-bottom: 0;
+  }
+  .info__img__name p {
+    font-size: 12px;
+  }
+  .services {
+    height: 950px;
+    width: 100%;
+  }
+  .services__title {
+    font-size: 35px;
+    margin-top: 40px;
+  }
+  .services__options {
+    margin-top: 50px;
+    gap: 55px;
+  }
+  .services__options__item {
+    gap: 25px;
+  }
+  .services__options__img {
+    width: 100px;
+    height: 100px;
+  }
+  .services__options__img img {
+    width: 57px;
+    right: 22px;
+    bottom: 20px;
+  }
+  .services__options__text h2 {
+    font-size: 20px;
+  }
+  .services__button {
+    font-size: 15px;
+    width: 135px;
+  }
+  .review__title {
+    font-size: 45px;
+  }
+  .review__text {
+    font-size: 10px;
+    width: 300px;
+  }
+  .review__author h2 {
+    font-size: 15px;
+  }
+  .review__author p {
+    font-size: 10px;
+  }
+  .contacts__title {
+    font-size: 40px;
+    margin-right: 20px;
+  }
+  .form-control {
+    width: 300px;
+  }
+  .contacts {
+    width: 100%;
+  }
+  .contacts .container {
+    gap: 35px;
+  }
+  .contacts__content {
+    flex-direction: column;
+    gap: 6px;
+  }
+  .contacts__button {
+    margin-top: 40px;
+    font-size: 10px;
+    letter-spacing: 0.2em;
+    margin-bottom: 40px;
+  }
+  .copyright {
+    width: 100%;
+  }
+  .copyright a i {
+    font-size: 20px;
+    right: -2%;
+  }
+  .copyright p {
+    font-size: 8px;
+  }
+  .form-check {
+    display: block;
+  }
+  .form-check-label {
+    width: 250px;
+  }
+}/*# sourceMappingURL=style.css.map */
