fixed mobile version

--- a/style.css
+++ b/style.css
@@ -374,9 +374,6 @@ a {
     font-size: 71px;
     width: 700px;
   }
-  .top__logo p {
-    display: none;
-  }
   .top__button {
     font-size: 22px;
     width: 380px;
@@ -546,7 +543,7 @@ a {
   }
   .review__text {
     font-size: 13px;
-    width: 250px;
+    width: 600px;
   }
   .contacts__title {
     font-size: 40px;
@@ -555,6 +552,9 @@ a {
   .form-control {
     width: 300px;
   }
+  .form-check {
+    display: flex;
+  }
   .contacts {
     width: 106%;
   }
@@ -562,8 +562,7 @@ a {
     gap: 35px;
   }
   .contacts__content {
-    flex-direction: column;
-    margin-left: 25px;
+    flex-direction: flex;
     gap: 6px;
   }
   .contacts__button {
@@ -594,8 +593,14 @@ a {
   .logo__img {
     width: 100px;
   }
+  .top__logo {
+    position: relative;
+  }
   .top__logo p {
-    display: none;
+    position: absolute;
+    left: 200px;
+    font-size: 10px;
+    top: 38px;
   }
   .top {
     gap: 100px;
@@ -713,6 +718,12 @@ a {
     flex-direction: column;
     gap: 6px;
   }
+  .contacts__data {
+    margin-left: 20px;
+  }
+  textarea.form-control {
+    margin-left: 20px;
+  }
   .contacts__button {
     margin-top: 40px;
     font-size: 10px;
@@ -724,13 +735,16 @@ a {
   }
   .copyright a i {
     font-size: 20px;
-    right: -2%;
+    right: 3%;
+    position: absolute;
   }
   .copyright p {
+    position: relative;
     font-size: 8px;
   }
   .form-check {
     display: block;
+    margin-left: 20px;
   }
   .form-check-label {
     width: 250px;
